# LightRFT

./: .buildinfo  .gitignore  .style.yapf  CHANGELOG.md  MANIFEST.in  Makefile  README.md  README_zh.md  genindex.html  index.html  index_zh.html  objects.inv  process_synthscars.py  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements.txt  search.html  searchindex.js  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 100-documentation.yml  200-installation.yml  300-usage.yml  400-bug-report.yml  500-training-issue.yml  600-performance.yml  700-feature-request.yml  README.md  config.yml
.github/workflows/: publish-to-pypi.yml  style.yml
_modules/: index.html
_sources/: index.rst.txt  index_zh.rst.txt
_sources/best_practice/: contributing.md.txt  contributing_zh.md.txt  faq.md.txt  faq_zh.md.txt  index.rst.txt  index_zh.rst.txt  model.md.txt  model_testing.md.txt  model_testing_zh.md.txt  model_zh.md.txt  reward_model.md.txt  strategy_design_philosophy.md.txt  strategy_design_philosophy_zh.md.txt  strategy_zh.md.txt  troubleshooting.md.txt  troubleshooting_zh.md.txt
_sources/installation/: index_zh.rst.txt
_sources/quick_start/: algorithms_cn.md.txt  configuration.md.txt  configuration_zh.md.txt  index.rst.txt  index_zh.rst.txt  project.rst.txt  project_zh.rst.txt
_static/css/: readthedocs.css
api_doc/datasets/: audio_alpaca.html  grm_dataset.html  hpdv3.html  image_reward_db.html  imagegen_cot_reward.html  index.html  omnirewardbench.html  process_reward_dataset.html  prompts_dataset.html  prompts_dataset_vl.html  rapidata.html  sft_dataset.html  sft_dataset_vl.html  srm_dataset.html  utils.html
api_doc/models/: actor_al.html  index.html  (+7 more)
best_practice/: contributing.html  contributing_zh.html  faq.html  faq_zh.html  index.html  index_zh.html  model.html  model_testing.html  model_testing_zh.html  model_zh.html  reward_model.html  reward_model_zh.html  strategy.html  strategy_design_philosophy.html  strategy_design_philosophy_zh.html  strategy_zh.html  troubleshooting.html  troubleshooting_zh.html
docs/: Makefile
installation/: index.html  index_cn.html  index_zh.html
quick_start/: algorithms.html  algorithms_cn.html  algorithms_zh.html  configuration.html  configuration_zh.html  index.html  index_zh.html  project.html  project_zh.html
(+341 files in other folders)
